--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.css
@@ -101,7 +101,7 @@ table tr.even_col {
 
 .nav-header{
     width: 100%;
-    height: 80px;
+    height: 70px;
     background-color: white;
     border-bottom: 1px solid rgb(0 0 0 / 18%);
     color: #777;
@@ -132,14 +132,14 @@ table tr.even_col {
     float: left;
     display: inline-block;
     font-weight: 400;
-    padding: 22px;
+    padding: 18px;
     font-size: 25px;
   }
 
   .logout{
     float: right;
     display: inline-block;
-    padding: 20px;
+    padding: 16px;
   }
 
   .examinee-viewport {
@@ -165,3 +165,7 @@ table tr.even_col {
     float: right;
     height: 35px;
   }
+  .downloadbtns{
+    display: inline-block;
+  }
+
