--- a/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
+++ b/franklyn-frontend/src/app/components/screenshots/screenshots.component.html
@@ -9,7 +9,7 @@
 
 <ng-template #content let-modal>
   <div class="modal-header">
-    <h2 class="modal-title">Screenshot</h2>
+    <h2 class="modal-title">Fullscreen - Screenshot</h2>
     <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
