fra-8 nan error

--- a/franklyn-frontend/src/app/components/howto/howto.component.html
+++ b/franklyn-frontend/src/app/components/howto/howto.component.html
@@ -25,9 +25,10 @@
                                 <br>
                                 <br>
                                 <p>Schüler/Studenten:</p>
-                                <li>Den Client auf der Website downloaden (Auf richtiges Betriebssytem achten!)</li>
-                                <li>Download öffnen</li>
-                                <li>PIN und Namen eingeben</li>
+                                <li>Den Client auf der Website downloaden (.jar-File)</li>
+                                <li>Den Client entzippen</li>
+                                <li>Den Terminal öffnen und in den Ordner "franklyn-client3" gehen</li>
+                                <li>Im Terminal java -jar franklyn3-client.jar eingeben und ausführen</li>
                             </ul>
                         </div>
                     </div>
