--- a/franklyn-frontned-lit/styles/style.css
+++ b/franklyn-frontned-lit/styles/style.css
@@ -141,6 +141,12 @@ h2{
     font-size: 1.8em;
 }
 
+h1{
+    text-align: center;
+    text-transform: uppercase;
+}
+
+
 #flex-container{
     display: flex;
     margin-left: auto;
@@ -152,7 +158,7 @@ h2{
     margin-right: 5%;
 }
 
-img{
+#screenshot img{
     width: 100%;
     height: auto;
     margin-bottom: 0.5em;
@@ -203,3 +209,48 @@ div.gallery:hover {
     color: black;
     transition: 0.3s ease-in-out;
 }
+
+#nav a {
+    text-decoration: none;
+    color: black;
+    margin-right: 3em;
+    text-transform: uppercase;
+}
+
+#nav a:not(:has(img)):after {
+    content: '';
+    display: block;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 1px;
+    background-color: black;
+    transition: width 0.3s ease-in-out;
+}
+
+#nav a:not(:has(img)):hover:after {
+    width: 100%;
+}
+
+#nav{
+    margin-top: 1em;
+    margin-bottom: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#nav a img{
+    width: 3em;
+    height: auto;
+    text-decoration: none;
+    opacity: 0.9;
+    transition: scale 0.3s ease-in-out, opacity 0.3s ease-in-out;
+;
+}
+
+#nav a img:hover{
+    scale: 110%;
+    opacity: 1;
+}
+
