--- a/franklyn-frontend-lit/styles/style.css
+++ b/franklyn-frontend-lit/styles/style.css
@@ -157,12 +157,28 @@ h1{
     display: flex;
     margin-left: auto;
     margin-right: auto;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 #flex-column{
-    flex: auto;
+    flex: 0 0 15%;
     margin-right: 3%;
     margin-left: 3%;
+    margin: 1em;
+}
+
+
+@media screen and (min-width: 750px) and (max-width: 1023px) {
+    #flex-column {
+        flex: 0 0 30%;
+    }
+}
+
+@media screen and (min-width: 0px) and (max-width: 750px) {
+    #flex-column {
+        flex: 0 0 50%;
+    }
 }
 
 #screenshot img{
@@ -198,7 +214,6 @@ div.gallery:hover {
 @media only screen and (max-width: 700px) {
     .responsive {
         width: 49.99999%;
-        margin: 6px 0;
     }
 }
 
@@ -299,12 +314,8 @@ div.gallery:hover {
     padding: 1em;
 }
 
-#about #flex-container{
-    width: 70%;
-}
 
 #about #explainFranklyn{
-    width: 50%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 4em;
@@ -313,3 +324,21 @@ div.gallery:hover {
 #about #explainFranklyn h2{
     margin-bottom: 0;
 }
+
+@media screen and (max-width: 800px){
+    #explainFranklyn{
+        width: 90%;
+    }
+}
+@media screen and (min-width: 801px) and (max-width: 1000px) {
+    #explainFranklyn{
+        width: 65%;
+    }
+}
+@media screen and (min-width: 1001px){
+    #explainFranklyn{
+        width: 50%;
+    }
+}
+
+
