--- a/franklyn-frontend-lit/styles/style.css
+++ b/franklyn-frontend-lit/styles/style.css
@@ -29,7 +29,7 @@ body{
     border-radius: 1em;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 1em;
-    width: 100%;
+    width: 50%;
 }
 
 label {
@@ -140,6 +140,10 @@ th#Email, td#Email {
     width: 100%;
 }
 
+th#Interval, td#Interval{
+    width: 15%;
+}
+
 h2{
     font-family: raleway-thin;
     font-size: 1.8em;
@@ -154,11 +158,14 @@ h1{
 
 
 #flex-container{
-    display: flex;
+    flex-wrap: wrap;
     margin-left: auto;
     margin-right: auto;
-    flex-wrap: wrap;
     justify-content: center;
+}
+
+#flex-container, #flex-container2{
+    display: flex;
 }
 
 #flex-column{
@@ -232,6 +239,17 @@ div.gallery:hover {
     transition: 0.3s ease-in-out;
 }
 
+#basicLink{
+    text-decoration: none;
+    color: #0C242C;
+    transition: 0.5s;
+}
+
+#basicLink:hover{
+    text-decoration: none;
+    color: #11404e;
+}
+
 #nav a {
     text-decoration: none;
     color: white;
@@ -239,8 +257,6 @@ div.gallery:hover {
     margin-left: 1.5em;
     text-transform: uppercase;
 }
-
-
 
 #nav a:not(:has(img)):after {
     content: '';
@@ -341,4 +357,60 @@ div.gallery:hover {
     }
 }
 
+#intervalValue{
+    font-family: Arial, sans-serif;
+    font-weight: lighter;
+    padding-left: 0.5em;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+input[type="range"] {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 50%;
+    height: 1em;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    padding:0;
+}
+
+input[type="range"]:hover {
+    opacity: 1;
+}
+
+input[type="range"]::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    appearance: none;
+    width: 1.5rem;
+    height: 1.5rem;
+    background: #4CAF50;
+    cursor: pointer;
+    border-radius: 100%;
+    padding:0;
+    margin-left: -1em;
+}
+
+input[type="range"]::-moz-range-thumb{
+    -webkit-appearance: none;
+    appearance: none;
+    width: 1.5rem;
+    height: 1.5rem;
+    background: #4CAF50;
+    cursor: pointer;
+    border-radius: 100%;
+    padding: 0;
+}
 
